--- a/workflows/lint/go/golangci-lint.yml
+++ b/workflows/lint/go/golangci-lint.yml
@@ -1,10 +1,6 @@
 name: golangci-lint
 on:
-  push:
-    branches:
-      - master
-      - main
-  pull_request:
+  workflow_call:
 
 permissions:
   contents: read
