--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -11,16 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout-code
+    - name: Checkout Code
       uses: actions/checkout@v3
-    
-    - name: Setup-Go
+
+    - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
-    
+
     - name: Install dependencies
       run: go mod vendor
-        
-    - name: Run-Test
+
+    - name: Run Go Tests
       run: go test -v -race ./...
