--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -12,14 +12,14 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: checkout-code
+      - name: Checkout Code
         uses: actions/checkout@v3
-      - name: Setup-Go        
+      - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
           cache: false
-      - name: golangci-lint
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           # Require: The version of golangci-lint to use.
