--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -23,4 +23,4 @@ jobs:
       run: go mod vendor
 
     - name: Run Go Tests
-      run: go test -v -race ./...
+      run: go test -v -race -coverprofile=coverage.out ./...
